[package]
name = "hash-delivery-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
indoc = "1.0"
log = "0.4"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
# tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "benchmark"
harness = false
