[package]
name = "hash-delivery-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
serde_json = "1.0"
tokio = { version = "1.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }

[dev-dependencies]
serial_test = "0.9"

[profile.test]
opt-level = 2
