[package]
name = "hash-delivery-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.8"
serial_test = "0.9"

[profile.test]
opt-level = 2
